updates and fixes

--- a/custom-service-adapter/content/local/books.html
+++ b/custom-service-adapter/content/local/books.html
@@ -36,9 +36,8 @@
   <hr/>
   <div class="row">
     <div class="col-sm-12">
-      <p>
-        XYZ123
-      </p>
+      <a class="btn btn-primary btn-large"
+         href="http://knotx.io/documentation/custom-service-adapter/">Go back to the tutorial</a>
     </div>
   </div>
 </div>
