--- a/conferences/devoxx2017/slides-instance/index.html
+++ b/conferences/devoxx2017/slides-instance/index.html
@@ -36,9 +36,66 @@
     </section>
 
     <section>
-      <section><h2>Challenges</h2></section>
-      <section>connecting data from many sources</section>
-      <section>flexible scalability / extendability</section>
+      <section><h2>@ML Challenges</h2></section>
+      <section>
+        @ML
+        connecting data from many sources
+      </section>
+      <section>
+        @TM
+        complex business logic stories
+      </section>
+      <section>
+        @TM
+        flexible scalability / extendability
+      </section>
+    </section>
+
+    <section>
+      <section>
+        <h1>@ML Integration approaches</h1>
+      </section>
+      <section>
+        @TM
+        Backend
+      </section>
+      <section>
+        @TM
+        Client-side
+      </section>
+      <section>
+        @ML
+        Modern
+      </section>
+    </section>
+
+    <section>
+      <section>
+        <h1>@ML Knot.x</h1>
+      </section>
+
+      <section>
+        @TM Data ingestion
+        <ul>
+          <li>Picture that shows the case</li>
+          <li>Example - iframe</li>
+          <li>Snippet/Config/Sources</li>
+        </ul>
+      </section>
+      <section>
+        @ML Forms
+      </section>
+      <section>
+        @ML Extendability
+      </section>
+      <section>
+        @TM Scalability
+      </section>
+    </section>
+
+    <section>
+      @ML
+      Thank you!
     </section>
   </div>
 </div>
