--- a/conferences/devoxx2017/slides/index.html
+++ b/conferences/devoxx2017/slides/index.html
@@ -116,20 +116,99 @@
     </section>
 
     <section>
+      <!-- @ML Knot.x -->
       <section>
-        <h1>@ML Knot.x</h1>
+        <h1>Knot.x</h1>
+
+      </section>
+      <section>
+        <img height="600" src="assets/img/knotx-intro-1.png">
+      </section>
+      <section>
+        <img height="600" src="assets/img/knotx-intro-2.png">
+      </section>
+      <section>
+        <img src="assets/img/knotx-intro-3.png">
+      </section>
+
+
+      <!-- @TM -->
+      <section>
+        <h1>Data Ingestion</h1>
+      </section>
+      <section data-background-iframe="http://localhost:8092/stock.html">
       </section>
 
       <section>
-        @TM Data ingestion
-        <ul>
-          <li>Picture that shows the case</li>
-          <li>Example - iframe</li>
-          <li>Snippet/Config/Sources</li>
-        </ul>
+        <h1>Image presenting integration points from previous page.</h1>
       </section>
+
       <section>
-        @TM performance results
+        <pre><code data-trim data-noescape>
+         <!-- https://www.freeformatter.com/html-escape.html -->
+&lt;script data-knotx-knots=&quot;services,handlebars&quot; data-knotx-service=&quot;first-service&quot; type=&quot;text/knotx-snippet&quot;&gt;
+&lt;div class=&quot;col-md-4&quot;&gt;
+  &lt;h2&gt;Snippet1 - {{_result.message}}&lt;/h2&gt;
+  &lt;div&gt;Snippet1 - {{_result.body.a}}&lt;/div&gt;
+  {{#string_equals _response.statusCode &quot;200&quot;}}
+    &lt;div&gt;Success! Status code : {{_response.statusCode}}&lt;/div&gt;
+  {{/string_equals}}
+&lt;/div&gt;
+&lt;/script&gt;
+
+        </code></pre>
+
+        <pre><code data-trim data-noescape>
+
+{
+  "_result": {
+    "message":"this is webservice no. 1",
+    "body": {
+      "a": "message a"
+    }
+  },
+  "_response": {
+    "statusCode":"200"
+  }
+}
+
+        </code></pre>
+      </section>
+
+      <section>
+        <h2>Performance results</h2>
+        <p>AWS: c4.large, 2CPU, 4GB RAM, 500Mbps bandwidth,centos 6.8</p>
+        <table>
+          <thead>
+          <tr>
+            <th>Item</th>
+            <th>Load</th>
+            <th>Response time</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>1 integration</td>
+            <td>200 req / s</td>
+            <td>5ms</td>
+          </tr>
+          <tr>
+            <td>1 integration</td>
+            <td>840 req / s</td>
+            <td> < 1s</td>
+          </tr>
+          <tr>
+            <td>5 integrations</td>
+            <td>200 req / s</td>
+            <td>60ms</td>
+          </tr>
+          <tr>
+            <td>5 integrations</td>
+            <td>345 req / s</td>
+            <td> < 1s</td>
+          </tr>
+          </tbody>
+        </table>
       </section>
       <section>
         @ML Forms
