--- a/conferences/devoxx2017/examples/online-markets/content/pages/main.html
+++ b/conferences/devoxx2017/examples/online-markets/content/pages/main.html
@@ -264,7 +264,7 @@
 
         </nav>
 
-        <div id="page-wrapper">
+        <div id="page-wrapper" class="page-bg">
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">Dashboard</h1>
@@ -293,7 +293,7 @@
                 <div class="col-lg-8">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Area Chart Example
+                            <i class="fa fa-stack-overflow fa-fw"></i> World Oil prices
                             <div class="panel-body">
                                 <div class="flot-chart">
                                     <div class="flot-chart-content" id="flot-line-chart-multi"></div>
@@ -308,15 +308,23 @@
                 <div class="col-lg-4">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bell fa-fw"></i> World Markets
+                            <i class="fa fa-tags fa-fw"></i> Commodities
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div class="list-group">
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-money fa-fw"></i> FTSE 100
-                                    <span class="pull-right text-muted small"><em>7,538.89</em> <em>+0.51%</em></span>
-                                </a>
+
+                                <script data-knotx-knots="services,handlebars"
+                                        data-knotx-service="commodities"
+                                        type="text/knotx-snippet">
+                                  {{#each _result.commodities}}
+                                    <a href="#" class="list-group-item">
+                                        <i class="fa fa-money fa-fw"></i> {{name}}
+                                        <span class="pull-right text-muted small"><em>{{units}} $</em></span>
+                                        <span class="text-muted small {{delta}}"><em>{{change}}</em></span>
+                                    </a>
+                                  {{/each}}
+                                </script>
                             </div>
                             <!-- /.list-group -->
                             <a href="#" class="btn btn-default btn-block">View All World Markets</a>
