Custom service - dynamic markets forecast

--- a/conferences/devoxx2017/examples/online-markets/content/example/pages/main.html
+++ b/conferences/devoxx2017/examples/online-markets/content/example/pages/main.html
@@ -301,7 +301,7 @@
       <div class="col-lg-8">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <i class="fa fa-stack-overflow fa-fw"></i> World Oil prices
+            <i class="fa fa-stack-overflow fa-fw"></i> World Markets Forecast
             <div class="panel-body">
               <div class="flot-chart">
                 <div class="flot-chart-content" id="flot-line-chart-multi"></div>
