--- a/conferences/devoxx2017/examples/online-markets/content/example/pages/main.html
+++ b/conferences/devoxx2017/examples/online-markets/content/example/pages/main.html
@@ -295,8 +295,40 @@
         </div>
       </div>
       <!-- /.col-lg-12 -->
+
+      <!-- transactions -->
+      <div class="col-lg-12">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <i class="fa fa-globe fa-fw"></i> My Transactions
+          </div>
+          <!-- /.panel-heading -->
+          <div class="panel-body">
+            <div class="list-group">
+              <script data-knotx-knots="services,handlebars"
+                      data-knotx-service="transactions"
+                      type="text/knotx-snippet">
+                                 {{#each _result}}
+                                    <a href="#" class="list-group-item">
+                                        <i class="fa fa-history fa-fw"></i> {{this.COMMODITY}}
+                                        <span class="pull-right text-muted"><em>total: {{this.TRANSACTION_VALUE}} $</em></span>
+                                        <span class="text-muted small"><em>unit price: {{this.UNIT_PRICE}}$</em></span>
+                                        <span class="text-muted small"><em> x {{this.UNITS_BOUGHT}}</em></span>
+                                    </a>
+                                  {{/each}}
+              </script>
+            </div>
+            <!-- /.list-group -->
+          </div>
+          <!-- /.panel-body -->
+        </div>
+        <!-- /.panel -->
+      </div>
+      <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
+    <!-- END transactions -->
+
     <div class="row">
       <div class="col-lg-8">
         <div class="panel panel-default">
@@ -332,7 +364,6 @@
                                         <span class="text-muted small {{delta}}"><em>{{change}}</em></span>
                                     </a>
                                   {{/each}}
-
 
               </script>
             </div>
