Transactions in main.html

--- a/conferences/devoxx2017/examples/online-markets/content/example/pages/main.html
+++ b/conferences/devoxx2017/examples/online-markets/content/example/pages/main.html
@@ -314,6 +314,7 @@
                                         <span class="pull-right text-muted"><em>total: {{this.TRANSACTION_VALUE}} $</em></span>
                                         <span class="text-muted small"><em>unit price: {{this.UNIT_PRICE}}$</em></span>
                                         <span class="text-muted small"><em> x {{this.UNITS_BOUGHT}}</em></span>
+                                        <span class="text-muted small"><em> at {{this.TRANSACTION_DATE}}</em></span>
                                     </a>
                                   {{/each}}
               </script>
