prepare db script

--- a/conferences/devoxx2017/examples/online-markets/content/example/pages/main.html
+++ b/conferences/devoxx2017/examples/online-markets/content/example/pages/main.html
@@ -340,6 +340,26 @@
           <!-- /.panel-body -->
         </div>
         <!-- /.panel -->
+      </div>
+
+      <div class="col-lg-8">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <i class="fa fa-stack-overflow fa-fw"></i> Transactions History
+            <div class="panel-body">
+              <div class="list-group">
+                <p>TODO</p>
+              </div>
+              <!-- /.list-group -->
+            </div>
+          </div>
+          <!-- /.panel-body -->
+        </div>
+        <!-- /.panel -->
+      </div>
+      <!-- /.col-lg-8 -->
+
+      <div class="col-lg-4">
         <div class="chat-panel panel panel-default">
           <div class="panel-heading">
             <i class="fa fa-comments fa-fw"></i> Chat
