--- a/conferences/devoxx2017/examples/online-markets/content/example/pages/transactions.html
+++ b/conferences/devoxx2017/examples/online-markets/content/example/pages/transactions.html
@@ -294,70 +294,36 @@
           <!-- /input-group -->
         </div>
       </div>
-      <!-- /.col-lg-12 -->
+      <!-- /.col-lg-12 search box-->
 
-      <!-- transactions -->
-      <div class="col-lg-12">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <i class="fa fa-globe fa-fw"></i> My Transactions
-          </div>
-          <!-- /.panel-heading -->
-          <div class="panel-body">
-            <div class="list-group">
-              <script data-knotx-knots="services,handlebars"
-                      data-knotx-service="transactions"
-                      type="text/knotx-snippet">
-                                 {{#each _result}}
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-history fa-fw"></i> {{this.COMMODITY}}
-                                        <span class="pull-right text-muted"><em>total: {{this.TRANSACTION_VALUE}} $</em></span>
-                                        <span class="text-muted small"><em>unit price: {{this.UNIT_PRICE}}$</em></span>
-                                        <span class="text-muted small"><em> x {{this.UNITS_BOUGHT}}</em></span>
-                                        <span class="text-muted small"><em> at {{this.TRANSACTION_DATE}}</em></span>
-                                    </a>
-                                  {{/each}}
-              </script>
-            </div>
-            <!-- /.list-group -->
-          </div>
-          <!-- /.panel-body -->
-        </div>
-        <!-- /.panel -->
-      </div>
-      <!-- /.col-lg-12 -->
-    </div>
-    <!-- /.row -->
-    <!-- END transactions -->
-
-    <div class="row">
-      <div class="col-lg-8">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <i class="fa fa-stack-overflow fa-fw"></i> World Markets Forecast
-            <div class="panel-body">
-              <div class="flot-chart">
-                <div class="flot-chart-content" id="flot-line-chart-multi"></div>
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <i class="fa fa-stack-overflow fa-fw"></i> World Markets Forecast
+              <div class="panel-body">
+                <div class="flot-chart">
+                  <div class="flot-chart-content" id="flot-line-chart-multi"></div>
+                </div>
               </div>
             </div>
+            <!-- /.panel-body -->
           </div>
-          <!-- /.panel-body -->
+          <!-- /.panel -->
         </div>
-        <!-- /.panel -->
-      </div>
-      <!-- /.col-lg-8 -->
-      <div class="col-lg-4">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <i class="fa fa-tags fa-fw"></i> Commodities
-          </div>
-          <!-- /.panel-heading -->
-          <div class="panel-body">
-            <div class="list-group">
+        <!-- /.col-lg-8 -->
+        <div class="col-lg-4">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <i class="fa fa-tags fa-fw"></i> Commodities
+            </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+              <div class="list-group">
 
-              <script data-knotx-knots="services,handlebars"
-                      data-knotx-service="commodities"
-                      type="text/knotx-snippet">
+                <script data-knotx-knots="services,handlebars"
+                        data-knotx-service="commodities"
+                        type="text/knotx-snippet">
                                   {{#each _result.commodities}}
                                     <a href="#" class="list-group-item">
                                         <i class="fa fa-money fa-fw"></i> {{name}}
@@ -367,173 +333,205 @@
                                   {{/each}}
 
               </script>
+              </div>
+              <!-- /.list-group -->
+              <a href="#" class="btn btn-default btn-block">View All World Markets</a>
             </div>
-            <!-- /.list-group -->
-            <a href="#" class="btn btn-default btn-block">View All World Markets</a>
+            <!-- /.panel-body -->
           </div>
-          <!-- /.panel-body -->
+          <!-- /.panel -->
         </div>
-        <!-- /.panel -->
-        <div class="chat-panel panel panel-default">
-          <div class="panel-heading">
-            <i class="fa fa-comments fa-fw"></i> Chat
-            <div class="btn-group pull-right">
-              <button type="button" class="btn btn-default btn-xs dropdown-toggle"
-                      data-toggle="dropdown">
-                <i class="fa fa-chevron-down"></i>
-              </button>
-              <ul class="dropdown-menu slidedown">
-                <li>
-                  <a href="#">
-                    <i class="fa fa-refresh fa-fw"></i> Refresh
-                  </a>
+
+        <div class="col-lg-8">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <i class="fa fa-stack-overflow fa-fw"></i> Transactions History
+              <div class="panel-body">
+                <div class="list-group">
+                  <script data-knotx-knots="services,handlebars"
+                          data-knotx-service="transactions"
+                          type="text/knotx-snippet">
+                                 {{#each _result}}
+                                    <a href="#" class="list-group-item">
+                                        <i class="fa fa-history fa-fw"></i> {{this.COMMODITY}}
+                                        <span class="pull-right text-muted"><em>total: {{this.TRANSACTION_VALUE}} $</em></span>
+                                        <span class="text-muted small"><em>unit price: {{this.UNIT_PRICE}}$</em></span>
+                                        <span class="text-muted small"><em> x {{this.UNITS_BOUGHT}}</em></span>
+                                        <span class="text-muted small"><em> at {{this.TRANSACTION_DATE}}</em></span>
+                                    </a>
+                                  {{/each}}
+                  </script>
+                </div>
+                <!-- /.list-group -->
+              </div>
+            </div>
+            <!-- /.panel-body -->
+          </div>
+          <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-8 -->
+
+        <div class="col-lg-4">
+          <div class="chat-panel panel panel-default">
+            <div class="panel-heading">
+              <i class="fa fa-comments fa-fw"></i> Chat
+              <div class="btn-group pull-right">
+                <button type="button" class="btn btn-default btn-xs dropdown-toggle"
+                        data-toggle="dropdown">
+                  <i class="fa fa-chevron-down"></i>
+                </button>
+                <ul class="dropdown-menu slidedown">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-refresh fa-fw"></i> Refresh
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-check-circle fa-fw"></i> Available
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-times fa-fw"></i> Busy
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-clock-o fa-fw"></i> Away
+                    </a>
+                  </li>
+                  <li class="divider"></li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-sign-out fa-fw"></i> Sign Out
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+              <ul class="chat">
+                <li class="left clearfix">
+                                    <span class="chat-img pull-left">
+                                        <img src="../dist/img/avatar-js.png"
+                                             alt="User Avatar" class="img-circle"/>
+                                    </span>
+                  <div class="chat-body clearfix">
+                    <div class="header">
+                      <strong class="primary-font">John Smith</strong>
+                      <small class="pull-right text-muted">
+                        <i class="fa fa-clock-o fa-fw"></i> 12 mins ago
+                      </small>
+                    </div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
+                      ornare dolor, quis ullamcorper ligula sodales.
+                    </p>
+                  </div>
                 </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-check-circle fa-fw"></i> Available
-                  </a>
+                <li class="right clearfix">
+                                    <span class="chat-img pull-right">
+                                        <img src="../dist/img/avatar-bd.png"
+                                             alt="User Avatar" class="img-circle"/>
+                                    </span>
+                  <div class="chat-body clearfix">
+                    <div class="header">
+                      <small class=" text-muted">
+                        <i class="fa fa-clock-o fa-fw"></i> 13 mins ago
+                      </small>
+                      <strong class="pull-right primary-font">Bob Doe</strong>
+                    </div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
+                      ornare dolor, quis ullamcorper ligula sodales.
+                    </p>
+                  </div>
                 </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-times fa-fw"></i> Busy
-                  </a>
+                <li class="left clearfix">
+                                    <span class="chat-img pull-left">
+                                        <img src="../dist/img/avatar-js.png"
+                                             alt="User Avatar" class="img-circle"/>
+                                    </span>
+                  <div class="chat-body clearfix">
+                    <div class="header">
+                      <strong class="primary-font">John Smith</strong>
+                      <small class="pull-right text-muted">
+                        <i class="fa fa-clock-o fa-fw"></i> 14 mins ago
+                      </small>
+                    </div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
+                      ornare dolor, quis ullamcorper ligula sodales.
+                    </p>
+                  </div>
                 </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-clock-o fa-fw"></i> Away
-                  </a>
-                </li>
-                <li class="divider"></li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-sign-out fa-fw"></i> Sign Out
-                  </a>
+                <li class="right clearfix">
+                                    <span class="chat-img pull-right">
+                                        <img src="../dist/img/avatar-bd.png"
+                                             alt="User Avatar" class="img-circle"/>
+                                    </span>
+                  <div class="chat-body clearfix">
+                    <div class="header">
+                      <small class=" text-muted">
+                        <i class="fa fa-clock-o fa-fw"></i> 15 mins ago
+                      </small>
+                      <strong class="pull-right primary-font">Bob Doe</strong>
+                    </div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
+                      ornare dolor, quis ullamcorper ligula sodales.
+                    </p>
+                  </div>
                 </li>
               </ul>
             </div>
-          </div>
-          <!-- /.panel-heading -->
-          <div class="panel-body">
-            <ul class="chat">
-              <li class="left clearfix">
-                                    <span class="chat-img pull-left">
-                                        <img src="../dist/img/avatar-js.png"
-                                             alt="User Avatar" class="img-circle"/>
-                                    </span>
-                <div class="chat-body clearfix">
-                  <div class="header">
-                    <strong class="primary-font">John Smith</strong>
-                    <small class="pull-right text-muted">
-                      <i class="fa fa-clock-o fa-fw"></i> 12 mins ago
-                    </small>
-                  </div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
-                    ornare dolor, quis ullamcorper ligula sodales.
-                  </p>
-                </div>
-              </li>
-              <li class="right clearfix">
-                                    <span class="chat-img pull-right">
-                                        <img src="../dist/img/avatar-bd.png"
-                                             alt="User Avatar" class="img-circle"/>
-                                    </span>
-                <div class="chat-body clearfix">
-                  <div class="header">
-                    <small class=" text-muted">
-                      <i class="fa fa-clock-o fa-fw"></i> 13 mins ago
-                    </small>
-                    <strong class="pull-right primary-font">Bob Doe</strong>
-                  </div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
-                    ornare dolor, quis ullamcorper ligula sodales.
-                  </p>
-                </div>
-              </li>
-              <li class="left clearfix">
-                                    <span class="chat-img pull-left">
-                                        <img src="../dist/img/avatar-js.png"
-                                             alt="User Avatar" class="img-circle"/>
-                                    </span>
-                <div class="chat-body clearfix">
-                  <div class="header">
-                    <strong class="primary-font">John Smith</strong>
-                    <small class="pull-right text-muted">
-                      <i class="fa fa-clock-o fa-fw"></i> 14 mins ago
-                    </small>
-                  </div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
-                    ornare dolor, quis ullamcorper ligula sodales.
-                  </p>
-                </div>
-              </li>
-              <li class="right clearfix">
-                                    <span class="chat-img pull-right">
-                                        <img src="../dist/img/avatar-bd.png"
-                                             alt="User Avatar" class="img-circle"/>
-                                    </span>
-                <div class="chat-body clearfix">
-                  <div class="header">
-                    <small class=" text-muted">
-                      <i class="fa fa-clock-o fa-fw"></i> 15 mins ago
-                    </small>
-                    <strong class="pull-right primary-font">Bob Doe</strong>
-                  </div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
-                    ornare dolor, quis ullamcorper ligula sodales.
-                  </p>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <!-- /.panel-body -->
-          <div class="panel-footer">
-            <div class="input-group">
-              <input id="btn-input" type="text" class="form-control input-sm"
-                     placeholder="Type your message here..."/>
-              <span class="input-group-btn">
+            <!-- /.panel-body -->
+            <div class="panel-footer">
+              <div class="input-group">
+                <input id="btn-input" type="text" class="form-control input-sm"
+                       placeholder="Type your message here..."/>
+                <span class="input-group-btn">
                                     <button class="btn btn-warning btn-sm" id="btn-chat">
                                         Send
                                     </button>
                                 </span>
+              </div>
             </div>
+            <!-- /.panel-footer -->
           </div>
-          <!-- /.panel-footer -->
+          <!-- /.panel .chat-panel -->
         </div>
-        <!-- /.panel .chat-panel -->
+        <!-- /.col-lg-4 -->
       </div>
-      <!-- /.col-lg-4 -->
+      <!-- /.row -->
     </div>
-    <!-- /.row -->
+    <!-- /#page-wrapper -->
+
   </div>
-  <!-- /#page-wrapper -->
+  <!-- /#wrapper -->
 
-</div>
-<!-- /#wrapper -->
+  <!-- jQuery -->
+  <script src="../vendor/jquery/jquery.min.js"></script>
 
-<!-- jQuery -->
-<script src="../vendor/jquery/jquery.min.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!-- Metis Menu Plugin JavaScript -->
+  <script src="../vendor/metisMenu/metisMenu.min.js"></script>
 
-<!-- Metis Menu Plugin JavaScript -->
-<script src="../vendor/metisMenu/metisMenu.min.js"></script>
+  <!-- Flot Charts JavaScript -->
+  <script src="../vendor/flot/excanvas.min.js"></script>
+  <script src="../vendor/flot/jquery.flot.js"></script>
+  <script src="../vendor/flot/jquery.flot.pie.js"></script>
+  <script src="../vendor/flot/jquery.flot.resize.js"></script>
+  <script src="../vendor/flot/jquery.flot.time.js"></script>
+  <script src="../vendor/flot-tooltip/jquery.flot.tooltip.min.js"></script>
+  <script src="../data/flot-data.js"></script>
 
-<!-- Flot Charts JavaScript -->
-<script src="../vendor/flot/excanvas.min.js"></script>
-<script src="../vendor/flot/jquery.flot.js"></script>
-<script src="../vendor/flot/jquery.flot.pie.js"></script>
-<script src="../vendor/flot/jquery.flot.resize.js"></script>
-<script src="../vendor/flot/jquery.flot.time.js"></script>
-<script src="../vendor/flot-tooltip/jquery.flot.tooltip.min.js"></script>
-<script src="../data/flot-data.js"></script>
-
-<!-- Custom Theme JavaScript -->
-<script src="../dist/js/sb-admin-2.js"></script>
+  <!-- Custom Theme JavaScript -->
+  <script src="../dist/js/sb-admin-2.js"></script>
 
 </body>
 
